--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Shopping List</h1>
-	<p id="first">Get it done today</p>
-	<input id="userinput" type="text" placeholder="enter items">
-	<button id="enter">Enter</button>
+	<h1>Lista de Compras</h1>
+	<p id="first">Comprar hoje:</p>
+	<input id="userinput" type="text" placeholder="Produto">
+	<button id="enter">Adicionar</button>
 	<ul>
 	</ul>
 	<script type="text/javascript" src="script.js"></script>
